package br.edu.ifpr.padroes.strategy;

public interface Desconto {

    double calcular(double valor);

}